# forge

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  RESEARCH-CONTEXT.md
.claude/: settings.json
.github/workflows/: deploy-builder.yml
infra/builder/: .env.example  forge_builder.py  run.sh  setup.sh
migrations/: 002_judgments.sql  003_model_registry.sql
orchestrator/: pyproject.toml
orchestrator/forge/: cli.py  config.py  db.py  models.py  router.py  server.py  telegram.py  worker.py
orchestrator/forge/agents/: __init__.py  base.py  research.py
orchestrator/forge/api/: __init__.py  routes.py
orchestrator/forge/judges/: __init__.py  aggregator.py  base.py  builtin.py  panel.py
orchestrator/forge/memory/: store.py
orchestrator/src/: cli.py  config.py  worker.py
orchestrator/src/agents/: __init__.py  base.py  research.py
orchestrator/src/api/: __init__.py  routes.py
orchestrator/src/memory/: retrieval.py
orchestrator/tests/: conftest.py  test_cli.py  test_cost_estimation.py  test_judges.py  test_task_lifecycle.py
